css/app.css
@font-face {
    font-family: rajdhani-bold;
    src: url(../fonts/Rajdhani-Bold.ttf);
}

@font-face {
    font-family: rajdhani-light;
    src: url(../fonts/Rajdhani-Light.ttf);
}

@font-face {
    font-family: rajdhani-medium;
    src: url(../fonts/Rajdhani-Medium.ttf);
}

@font-face {
    font-family: rajdhani;
    src: url(../fonts/Rajdhani-Regular.ttf);
}

@font-face {
    font-family: rajdhani-semibold;
    src: url(../fonts/Rajdhani-SemiBold.ttf);
}

body{
    height:100%;
    font-family: rajdhani;
}
#loader{
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 20;
    background: #aa21b3;
    text-align: center;
}
#loader .cube{
    transform: skewX(-10deg);
    border: none;
    display: inline-block;
    position: relative;
    top:45%;
    width: 20%;
    height: 30px;
    border: 1px solid #ffdb55;
    margin:2px;
    overflow: hidden;
}
#loader .cube .cursor{
    background-color: #ffdb55;
    width:30px;
    height:30px;
    position:relative;
    animation-name: cursormove;
    animation-duration: 800ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}
@keyframes cursormove {
    0%{ left: 0; }
    50%{ left: 100%; }
    100%{left: 0;}
}

#container{
    height: 100%;
    width: 100%;
    position: absolute;
    padding: 0;
    box-sizing: border-box;
}

.card-menu{
    background: rgba( 0,0,0,0.6);
    line-height: 15px;
    width: 100%;
    box-sizing: border-box;
    white-space: nowrap;
    text-align: center;
    z-index: 5;

    padding: 0 150px;
    overflow-x: auto;
    overflow-y: hidden;
}

.card-menu .menu-item{
    background: #3e2564;
    border: 2px solid #3e2564;
    border-radius: 7px;
    margin: 14px 10px;
    display: inline-block;
    overflow: hidden;
    text-align: center;
    width: 64px;
    height: 44px;

    pointer-events: none;
    perspective: 1000px;
}
.card-menu .menu-item.selected{
    border-color: #ffdb55;
}
.card-menu .menu-item .flip-card-inner {     /* This container is needed to position the front and back side */
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.card-menu .menu-item.active .flip-card-inner{
    transform: rotateY(180deg);
    pointer-events: all;
}

.card-menu .menu-item .flip-card-front,
.card-menu .menu-item .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
.card-menu .menu-item .flip-card-back {
    background-color: #bbb;
    color: black;
}

/* Style the back side */
.card-menu .menu-item .flip-card-front{
    background-color: dodgerblue;
    color: white;
    transform: rotateY(180deg);
}

.card-menu .menu-item img{
    height: 40px;

}

#homelink{
    position: absolute;
    right: 20px;
    top: -5px;
    z-index: 5;
}

#homelink img{
    height: 70px;
}

#mb-fullscreen{
    display: block;
    position: fixed;
    top: 66px;
    left: 2px;

    z-index: 11;
}
#mb-fullscreen img{
    height: 18px;
}

#canvas{
    text-align: center;
    box-sizing: border-box;
    border-radius: 20px;
    margin: 20px auto;
}

#canvas .puzzlepiece{
    height: 100%;
    width: auto;
    margin: auto;

    border-radius: 60px;
    overflow: hidden;
    display: inline-block;

    position: relative;
    top:0;
    left:0;

}

@media (max-aspect-ratio: 4/3) { /* vertical device */
    #canvas{
        width: 85%;
        height: auto;

    }
    #canvas .puzzlepiece .image{
        top:0;
        left:0;
        width: 100%;
        display: inline-block;
    }
}
@media (min-aspect-ratio: 4/3) {
    #canvas{
        height: 75%;
        width: auto;
        margin-top: 15px;
    }
    #canvas .puzzlepiece .image{
        height: 100%;
        width: auto;
    }
    .card-menu .menu-item{
        margin: 10px 20px;
    }
}

#canvas .puzzlepiece{
    display: none;
}
#canvas .puzzlepiece:target,
#canvas .puzzlepiece.first-selected
{
    opacity: 1;
    z-index: 1;
    display: inline-block;
}

#canvas .puzzlepiece .hiddenbutton{
    cursor: pointer;
    background: none;
    opacity: 0.3;
}
#canvas .puzzlepiece .hiddenanchor{
    cursor: default;
    background: none;
    opacity: 0.3;
}

/* questions */
#question-list:target{display: block;}
#question-list{display: none;}

#question-list{
    position: absolute;
    top: 80px;
    width: 100%;
    text-align: center;
    padding: 30px 0;
    overflow: hidden; /* prevent extra scrolling*/
}
#question-list .question-row{
    margin-top:5px;
}
#question-list .question{
    border-radius: 15px;
    overflow: hidden;
    perspective: 1000px;
    width:225px;
    height: 150px;
    display: inline-block;
    margin: 0;
}
#question-list .question img{
    height: 100%;
}
#question-list .question .flip-card-inner {     /* This container is needed to position the front and back side */
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

#question-list .question.active .flip-card-inner{
    transform: rotateY(180deg);
}
#question-list .question .flip-card-front,
#question-list .question .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
#question-list .question .flip-card-back {
    background-color: #bbb;
    color: black;
}

/* Style the back side */
#question-list .flip-card-front{
    color: white;
    transform: rotateY(180deg);
}
#question-list .question-row button{
    margin: 60px 0;
    white-space: nowrap;
    float:left;
}

#question-list .text-answer{
    width: 100%;
    color: #ffffff;
    border: 3px solid #ffdb55;
    color: #ffdb55;
    background: rgba(0,0,0,0.6);
    text-align: center;
    border-radius: 7px;
    padding: 20px;
    font-weight: bold;
    font-size: large;
    margin: 15px;
    display: none;
}

/* Style for tuto */
#grey-overlay, #transparent-overlay{
    position: fixed;
    background: rgba(0,0,0,.5);
    width: 100%;
    height: 100%;
    top:0;
    left:0;
    z-index: 1;
}
#transparent-overlay{
    background: none;
    display: none;
    z-index: 5;
}
#grey-overlay.fadded{
    opacity: 0;
    visibility: hidden;
    transition: visibility 0s 1s, opacity 1s linear;
}

#hint-magnifier{
    position: fixed;

    z-index:11;
    overflow: visible;

    width: 0; /* set in js */
    height: 0; /* set in js */
    top:-100px; /* set in js */
    left: -100px; /* set in js */

    transition-property: width, height, top, left;
    transition-duration: 500ms;
    transition-timing-function: linear;

}

#hint-magnifier .magnifying-glass{
    width: 100%;
    position:absolute;
    left: 0;
    top: 0;
}

#hint-magnifier .hiddenbutton{
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    position: absolute;
}

/**/
#texts-tuto{
    display: block;
    position: fixed;
    width: 100%;
    bottom: 0;
    z-index:12;
}
.tuto-text{
    width: 45%;
    color: #ffffff;
    border: 3px solid #ffdb55;
    background: rgba(0,0,0,0.6);
    text-align: center;
    border-radius: 7px;
    padding: 20px;
    font-weight: bold;
    font-size: large;
    margin: 30px auto;
    display: none;
}

.tuto-text p{
    margin: 0.2em;
}

.tuto-text img{
    height: 35px;
    margin: 3px;
}

    /* game end button */
#game-end{ display: none; }
#game-end.active{ display: inline;}

